<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/addressEt"
        android:textSize="@dimen/edit_text_text_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="textCapWords"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/cityEt"
        android:textSize="@dimen/edit_text_text_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/city_hint"
        android:inputType="textCapWords"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toStartOf="@+id/stateEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintWidth_percent="0.4" />

    <EditText
        android:id="@+id/stateEt"
        android:textSize="@dimen/edit_text_text_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/state_hint"
        android:inputType="textCapCharacters"
        android:textAllCaps="true"
        android:maxLength="2"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toStartOf="@+id/zipEt"
        app:layout_constraintStart_toEndOf="@id/cityEt"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintWidth_percent="0.2" />

    <EditText
        android:id="@+id/zipEt"
        android:textSize="@dimen/edit_text_text_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/zip_hint"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/text_color"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stateEt"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintWidth_percent="0.3" />

    <EditText
        android:id="@+id/firstNameEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:inputType="textCapWords"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textSize="@dimen/edit_text_text_size"
        app:layout_constraintEnd_toStartOf="@+id/lastNameEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/lastNameEt"
        android:textSize="@dimen/edit_text_text_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="textCapWords"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/firstNameEt"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/next"
        android:textColor="@color/button_text_color"
        android:background="@color/button_color"
        android:onClick="changeActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stateEt"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Last Name"
        app:layout_constraintStart_toStartOf="@+id/lastNameEt"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Address"
        app:layout_constraintStart_toStartOf="@+id/addressEt"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEt" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="First Name"
        app:layout_constraintStart_toStartOf="@+id/firstNameEt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="State"
        app:layout_constraintStart_toStartOf="@+id/stateEt"
        app:layout_constraintTop_toBottomOf="@+id/addressEt" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Zip Code"
        app:layout_constraintStart_toStartOf="@+id/zipEt"
        app:layout_constraintTop_toBottomOf="@+id/addressEt" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="City"
        app:layout_constraintStart_toStartOf="@+id/cityEt"
        app:layout_constraintTop_toBottomOf="@+id/addressEt" />
</android.support.constraint.ConstraintLayout>